[gd_scene load_steps=5 format=2]

[ext_resource path="res://RaptorRender/GUI/SortableTable/specific_sortable_table_cell_elements/CurrentJobLink/CurrentJobLink.gd" type="Script" id=1]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/link_default_15x15.png-a76d158fe9796f18157947c9e9331e36.stex"

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/link_clicked_15x15.png-ea954627a1c2cebec245d36a1107da92.stex"

[sub_resource type="StreamTexture" id=3]
flags = 4
load_path = "res://.import/link_hover_15x15.png-db794ce4d8ab3186991b60570a240718.stex"

[node name="HBoxContainer" type="HBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5
script = ExtResource( 1 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_top = 12.0
margin_right = 15.0
margin_bottom = 27.0
rect_min_size = Vector2( 15, 15 )
hint_tooltip = "select this job"
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = SubResource( 1 )
texture_pressed = SubResource( 2 )
texture_hover = SubResource( 3 )

[node name="CurrentJobLabel" type="Label" parent="."]
margin_left = 20.0
margin_top = 13.0
margin_right = 56.0
margin_bottom = 27.0
text = "name"
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
